Fixed main page on mobile

--- a/resources/assets/js/app/styles/app.scss
+++ b/resources/assets/js/app/styles/app.scss
@@ -1,4 +1,5 @@
 @import '~app/bootstrap/variables';
+@import '~bootstrap/scss/mixins/breakpoints';
 
 $app-header-height: 80px;
 $app-footer-height: 130px;
@@ -167,9 +168,10 @@ dt {
 }
 .home-slider {
     width: 100%;
-    height: 600px;
+    min-height: 600px;
     background: url('/template/img/bg.jpg') no-repeat center center;
     background-size: cover;
+    padding-bottom: 50px;
 
     &__steps {
         margin-top: 100px;
@@ -184,6 +186,12 @@ dt {
     &__search {
         margin: 100px 1rem 0;
         text-align: center;
+    }
+
+    @include media-breakpoint-down(xs) {
+        &__steps {
+            display: none;
+        }
     }
 }
 
